hermes/config/iptables.rules
# Generated by iptables-save v1.8.3 on Sun Sep 15 19:12:51 2019
*mangle
:PREROUTING ACCEPT [3160909:2001162413]
:INPUT ACCEPT [145258:18682723]
:FORWARD ACCEPT [3015651:1982479690]
:OUTPUT ACCEPT [114489:9981483]
:POSTROUTING ACCEPT [3129899:1992446713]
#-A POSTROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG ACK -m length --length 40:64 -j MARK --set-xmark 0xa/0xffffffff
#-A POSTROUTING -p udp -j MARK --set-xmark 0xa/0xffffffff
COMMIT
# Completed on Sun Sep 15 19:12:51 2019
# Generated by iptables-save v1.8.3 on Sun Sep 15 19:12:51 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [3015578:1982475310]
:OUTPUT ACCEPT [114356:9974985]
:LIMIT - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
#-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j LIMIT
#-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j LIMIT
#-A LIMIT -p tcp -m connlimit --connlimit-above 200 --connlimit-mask 0 --connlimit-saddr -j REJECT --reject-with tcp-reset
COMMIT
# Completed on Sun Sep 15 19:12:51 2019
# Generated by iptables-save v1.8.3 on Sun Sep 15 19:12:51 2019
*nat
:PREROUTING ACCEPT [110:7192]
:INPUT ACCEPT [74:4903]
:OUTPUT ACCEPT [60:3627]
:POSTROUTING ACCEPT [60:3627]
#-A POSTROUTING -o ppp0 -j MASQUERADE
#-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Sun Sep 15 19:12:51 2019
